--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,24 @@
 [package]
 name = "mocking_problems"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
+[[bin]]
+name = "simple"
+path = "src/simple/main.rs"
+
+[[bin]]
+name = "threadsafe"
+path = "src/threadsafe/main.rs"
+
+[[bin]]
+name = "sharedresource"
+path = "src/sharedresource/main.rs"
+
+
 [dependencies]
+dyn-clone = "1.0.16"
+tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
 
 [dev-dependencies]
-mockall = "0.11.4"
+mockall = "0.12.1"
